CostalCloud/force-app/main/default/objects/Rules_Regs__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Store_ID__c</fullName>
        <formula>Store_Client__r.Account_Id_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client/Store ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HDS</fullName>
                </value>
                <value>
                    <fullName>Murphy Doors</fullName>
                </value>
                <value>
                    <fullName>NIS</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
                <value>
                    <fullName>THD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Index_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Index Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Installation_State__c</fullName>
        <label>Installation State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job SKU</label>
        <referenceTo>Job_SKU__c</referenceTo>
        <relationshipLabel>Rules/Regs</relationshipLabel>
        <relationshipName>Rules_Regs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rules_Regs_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rules/Regs ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_ID__c</fullName>
        <formula>Job_SKU__r.Job_SKU_ID_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store/Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rules/Regs</relationshipLabel>
        <relationshipName>Rules_Regs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>svcCodeType__c</fullName>
        <inlineHelpText>Only enter I or M any other values and code will not find match to permit calculations</inlineHelpText>
        <label>svcCodeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rules/Regs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Store_Client__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>Installation_State__c</columns>
        <columns>svcCodeType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Permit_Requirements</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Program__c</columns>
        <columns>Category__c</columns>
        <columns>Installation_State__c</columns>
        <columns>Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rules_Regs__c.Permit</value>
        </filters>
        <label>Permit Requirements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RRP_Requirements</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Store_Client__c</columns>
        <columns>Program__c</columns>
        <columns>Category__c</columns>
        <columns>svcCodeType__c</columns>
        <columns>Installation_State__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rules_Regs__c.RRP</value>
        </filters>
        <label>RRP Requirements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Rules/Regs #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules/Regs</pluralLabel>
    <recordTypes>
        <fullName>Permit</fullName>
        <active>true</active>
        <label>Permit</label>
    </recordTypes>
    <recordTypes>
        <fullName>RRP</fullName>
        <active>true</active>
        <label>RRP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>