CostalCloud/force-app/main/default/objects/Rules_Regs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store_Client__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>Installation_State__c</columns>
    <columns>svcCodeType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>