CostalCloud/force-app/main/default/objects/Rules_Regs__c/listViews/Permit_Requirements.listView-meta.xml
<ListView>
    <fullName>Permit_Requirements</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Program__c</columns>
    <columns>Category__c</columns>
    <columns>Installation_State__c</columns>
    <columns>Unique_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rules_Regs__c.Permit</value>
    </filters>
    <label>Permit Requirements</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>