CostalCloud/force-app/main/default/objects/Rules_Regs__c/listViews/RRP_Requirements.listView-meta.xml
<ListView>
    <fullName>RRP_Requirements</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Store_Client__c</columns>
    <columns>Program__c</columns>
    <columns>Category__c</columns>
    <columns>svcCodeType__c</columns>
    <columns>Installation_State__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rules_Regs__c.RRP</value>
    </filters>
    <label>RRP Requirements</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>